第二次提交

--- a/微服务/微服务正文.md
+++ b/微服务/微服务正文.md
@@ -289,7 +289,14 @@ Our colleague Sam Newman spent most of 2014 working on a book that captures our 
 只要我们涉及到软件工程,我们就会想要通过将组建插在一起来构建系统,就好像在物理世界中我们看待事物的方式.过去二十年中,我们看见很大的进步在
 公共软件库(large compendiums of common libraries),其中大部分是编程语言平台
 
-当谈论到组件的时候,我们遇到了一个难题,什么是组件.我们的定义时(https://martinfowler.com/bliki/SoftwareComponent.html).一个组件就是一个可以独立更换和升级的软件单元
+当谈论到组件的时候,我们遇到了一个难题,什么是组件.[我们的定义时](https://martinfowler.com/bliki/SoftwareComponent.html).一个组件就是一个可以独立更换和升级的软件单元
 
-但他们组件化的首要方法是将软降分类为服务.我们将软件库定义为组件，它可以连接到项目并且通过内存中的函数来调用,服务是在进程外组件,它交流通过web service的机制,或者远程程序调用.(这不同于许多面向对象的程序中的service object概念(https://martinfowler.com/articles/microservices.html#footnote-service-object)
+但他们组件化的首要方法是将软降分类为服务.我们将软件库定义为组件，它可以连接到项目并且通过内存中的函数来调用,服务是在进程外组件,它交流通过web service的机制,或者远程程序调用.([这不同于许多面向对象的程序中的service object概念](包括我们自己在内的许多面向对象的设计人员，在域驱动设计的意义上将术语服务对象用于执行与实体无关的重要过程的对象。))
 
+使用服务作为组件而不是类库的原因是服务是独立可部署的.如果你有一个应用(我们认为应用程序是一种社会结构，它将代码库，功能组和资金主体捆绑在一起)由多种类库构成运行在一个单线程上,任何一个单个组件的改变都会使整个项目重新部署.但是如果一个应用被分解为多个服务,你可以期待很多单个服务的改变只会导致那一个被改变服务重新部署.但是这不是绝对的, 一些修改服务接口的改变会导致一些协同变化,但是一个好的微服务架构的目的在于通过集中服务边界化和服务协议的演变机制
+
+使用服务组件化的另一个结果就是更明显的组件接口.大多数编程语言没有一个好的机制来定义[显性接口](https://martinfowler.com/bliki/PublishedInterface.html)通常情况下仅仅是文档说明和明文规定来阻止用户打破一个组件的封装,导致组件之间过于紧密的耦合.服务组件化通过使用远程调用机制的方式使他们很容易避开这种情况
+
+使用像这样的服务是有缺点的,远程调用比在进程调用更加昂贵,所以远程接口需要具有广接受度,这样是他更加难以使用.如果你需要改变组件之间的职责分配,那么当你跨进程边界,很难做到组件改动
+
+近似的,我们能观察到服务映射到进程中,但是他仅仅是一个近似.一个服务可能由很多进程组成,而这些进程一直被一起开发和部署,例如一个应用进程和一个仅仅被该进程使用的数据库
