--- a/微服务/微服务正文.md
+++ b/微服务/微服务正文.md
@@ -300,3 +300,19 @@ Our colleague Sam Newman spent most of 2014 working on a book that captures our 
 使用像这样的服务是有缺点的,远程调用比在进程调用更加昂贵,所以远程接口需要具有广接受度,这样是他更加难以使用.如果你需要改变组件之间的职责分配,那么当你跨进程边界,很难做到组件改动
 
 近似的,我们能观察到服务映射到进程中,但是他仅仅是一个近似.一个服务可能由很多进程组成,而这些进程一直被一起开发和部署,例如一个应用进程和一个仅仅被该进程使用的数据库
+
+
+
+### 围绕业务能力组件团队
+
+围绕业务能力组件团队当一个大的应用分为几个部分的时候,经常管理层会集中在技术层,导致UI团队,服务端团队,和数据库团队.当这些团队被沿着这些技术线分开,甚至一个小小的改变都会导致跨团队工程,花费的时间和预算都不可小视,一个聪明的团队会优化这个问题,两害相权取其轻-就是强制把代码逻辑塞入他们可以访问的应用.换句话说就是代码逻辑到处都是这就是[康威定律](任何组织的设计系统(广泛定义)将会生产一个设计的架构,而这个架构与这个组织的交流架构相一致)在起作用的活生生的例子。
+
+![conways-law.png (560Ã463)](https://raw.githubusercontent.com/Codemilk/LearnNotes/main/Pic/20210107154422.png)
+
+Figure 2: Conway's Law in action
+
+微服务分解的方法是不同的, 围绕业务分为服务.这些服务提供了广泛的软件业务领域实现,包括用户界面,持久存储,和以及任何对外的协作性操作.因此,团队是跨功能的，它拥有软件开发所需的全方位的技能：用户体验、数据库和项目管理。
+
+![PreferFunctionalStaffOrganization.png (748Ã430)](https://raw.githubusercontent.com/Codemilk/LearnNotes/main/Pic/20210107154448.png)
+
+Figure 3: Service boundaries reinforced by team boundaries
